<resources>
    <string name="app_name">TestUi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sample">My sample title</string>
    <string name="title_activity_player_index">PlayerIndexActivity</string>
    <string name="title_activity_legal_ul">Legal ULA of Doomsday 123</string>
    <string name="large_text_content_sample">This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text
    This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text
        This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text
        This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text
        This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text
        This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text
        This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text This is some legal mumbo jumbo text
    </string>
    <string name="choice_button_text_sample">Sample button</string>
    <string name="legal_accept_ula">Accepter</string>
    <string name="legal_decline_ula">Refuser</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="loading_sample">Loading some data, making a sandwitch, Nuking the moon...
    Please drink some coffee or tea and make yourself confortable.</string>
    <string name="title_activity_index">Dashboard</string>
    <string name="temp_update_skip_button">skip update (will disappear in production)</string>
    <string name="index_menu_principal_button">Hom</string>
    <string name="index_menu_second_principal_button">Jou</string>
    <string name="index_menu_third_principal_button">Que</string>
    <string name="index_menu_secondary_button">Ava</string>
    <string name="index_menu_second_secondary_button">Set</string>

    <string name="index_sample_background">Background</string>
    <string name="index_sample_avatar">Avatar</string>
    <string name="index_sample_location_button">Loc</string>

    <string name="title_activity_quest_board">Quest Board</string>
    <string name="title_activity_quest_proposal">Quest Proposal placeholder</string>
    <string name="title_activity_quest_journal">Quest Journal</string>
    <string name="title_activity_quest_history">Quest history placeholder</string>

    <string name="title_activity_setup">Settings</string>
    <string name="title_activity_trophy_showcase">Trophy showcase</string>
    <string name="title_activity_trophy">Trophy title placeholder</string>

    <string name="title_activity_avatar_customization">Avatar customization</string>
    <string name="sample_quest_board_row_title">Sample quest title</string>
    <string name="sample_quest_board_row_title_warning">The quest will be gone on 06/06/2017 17:45</string>
    <string name="sentence_quest_post_expiration_warning">The quest will expire at </string>

    <string name="label_quest_board_list_title">Quests available:</string>
    <string name="label_quest_board_list_update_date">(updated the 01/01/2111)</string>

    <string name="label_description_quest_proposal">Description: </string>
    <string name="placeholder_warning_quest_proposal">This quest will expire the 01/01/2222</string>
    <string name="txt_description_quest_proposal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla imperdiet mi eu malesuada. Donec et consequat leo, id porta neque. Maecenas suscipit, arcu eu consequat blandit, arcu dolor consequat erat, ac iaculis ante enim et mi. Quisque sapien nisl, ultricies quis volutpat ac, gravida at metus. Nullam quis tincidunt eros. Mauris a risus non justo venenatis mattis. Vivamus ullamcorper convallis libero, sed rhoncus leo. Donec blandit turpis enim, ac fringilla lorem suscipit et. In nec eros ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Curabitur scelerisque sollicitudin cursus. Nullam fringilla efficitur lectus, in viverra tellus facilisis eu. Nam commodo neque ut nibh tincidunt sagittis. Proin bibendum ex sed elit ullamcorper, mollis gravida nunc placerat.</string>
    <string name="label_steps_quest_proposal">Locations to explore:</string>
    <string name="placeholder_quest_proposal_step_location">A placeholder location</string>

    <string name="title_quest_journal_activity">Quest journal</string>
    <string name="label_quest_journal_list_title">Your finished quests:</string>

    <string name="sample_quest_event_title">09/06/2017 went to the castle X</string>
    <string name="label_quest_journal_event">All events</string>

    <string name="title_trophy_showcase">Trophy Showcase</string>sample_trophy_showcase_row_title
    <string name="label_trophy_showcase">Trophies:</string>
    <string name="sample_trophy_showcase_row_title">Trophy title placholder</string>

    <string name="title_trophy">Trophy</string>
    <string name="label_trophy_requirements">Requirements:</string>

    <string name="title_settings">Settings</string>
    <string name="label_settings_hand">Hand orientation:</string>
    <string name="sample_value_hand_orientation">Left</string>
    <string name="label_settings_social_media">Social media accounts:</string>
    <string name="label_settings_facebook">Facebook account</string>
    <string name="label_settings_tweeter">Tweeter account</string>

    <string name="title_custom_avatar">Avatar</string>
    <string name="label_custom_avatar_gender">Gender:</string>
    <string name="label_custom_avatar_picture">Picture:</string>



</resources>
