<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/OmniMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <Button
            android:id="@+id/OmniMenuBtnMostImportant"
            android:layout_width="55dp"
            android:layout_height="55dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            android:text="@string/index_menu_principal_button"
            />
        <!-- example background image
         android:background="@drawable/home_btn_test"
        android:drawableTop="@drawable/home_icon_test"
        android:textColor="#FFFFFF"
        android:id="@+id/ButtonTest"
        android:paddingTop="32sp"
        android:drawablePadding="-15sp"
        -->

        <Button
            android:id="@+id/OmniMenuBtnSecondMostImportant"
            android:layout_width="55dp"
            android:layout_height="55dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/OmniMenuBtnMostImportant"


            android:layout_marginLeft="9dp"
            android:text="@string/index_menu_second_principal_button"
            />
        <Button
            android:id="@+id/OmniMenuBtnThirdMostImportant"
            android:layout_width="55dp"
            android:layout_height="55dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/OmniMenuBtnSecondMostImportant"

            android:layout_marginLeft="9dp"
            android:text="@string/index_menu_third_principal_button"
            />
        <Button
            android:id="@+id/OmniMenuBtnSecondLessImportant"
            android:layout_width="55dp"
            android:layout_height="55dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/OmniMenuBtnMostImportant"

            android:layout_marginRight="9dp"
            android:text="@string/index_menu_secondary_button"
            />
        <Button
            android:id="@+id/OmniMenuBtnThirdLessImportant"
            android:layout_width="55dp"
            android:layout_height="55dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/OmniMenuBtnSecondLessImportant"

            android:layout_marginRight="9dp"
            android:text="@string/index_menu_second_secondary_button"
            />
    </android.support.constraint.ConstraintLayout>
</merge>