<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.schneppd.android.Application.SetupActivity"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <!-- Header aligned to top -->
    <include layout="@layout/content_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/tvLabelSettings"
        android:text="@string/label_settings_hand"

        app:layout_constraintTop_toBottomOf="@+id/Header"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"

        android:textSize="19sp"
        android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chkHandOrientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_settings_social_media"

            app:layout_constraintLeft_toLeftOf="@+id/tvLabelSettings"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelSettings"
            android:layout_marginTop="5dp"

            android:textSize="11sp"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:id="@+id/tvLabelSocialMediaAccounts"
            android:text="@string/label_settings_social_media"

            app:layout_constraintTop_toBottomOf="@+id/chkHandOrientation"
            app:layout_constraintLeft_toLeftOf="@+id/tvLabelSettings"

            android:layout_marginTop="9dp"
            android:layout_marginLeft="5dp"

            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />

        <Button
            android:id="@+id/btnFacebookAccount"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/label_settings_facebook"
            android:textSize="11sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelSocialMediaAccounts"
            app:layout_constraintLeft_toLeftOf="@+id/tvLabelSettings"
            />

        <Button
            android:id="@+id/btnTweeterAccount"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/label_settings_tweeter"
            android:textSize="11sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/btnFacebookAccount"
            app:layout_constraintLeft_toLeftOf="@+id/tvLabelSettings"
            />


    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
