<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.schneppd.android.Application.PlayerIndex"
    tools:showIn="@layout/activity_player_index"
    >

    <Button
        android:id="@+id/IndexBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:layout_margin="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        android:text="@string/index_sample_background"
        />
    <Button
        android:id="@+id/IndexAvatarImage"
        android:layout_width="250dp"
        android:layout_height="200dp"


        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/IndexBackgroundImage"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/IndexBackgroundImage"
        app:layout_constraintBottom_toBottomOf="@+id/IndexBackgroundImage"
        android:layout_marginBottom="25dp"
        android:background="@color/colorBigSeparatorStroke"
        android:text="@string/index_sample_avatar"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <Button
        android:id="@+id/ButtonTryValidateQuests"

        android:layout_width="88dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorDecorationStrokes"
        android:text="@string/index_sample_location_button"
        android:layout_marginEnd="30dp" />

</android.support.constraint.ConstraintLayout>
