<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="org.schneppd.android.Application.QuestHistoryActivity"
    >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <!-- Header aligned to top -->
    <include layout="@layout/content_header" />
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/Header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:id="@+id/tvLabelDescriptionQuestProposal"
                android:text="@string/label_description_quest_proposal"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"

                android:textSize="19sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:id="@+id/tvTextDescriptionQuestProposal"
                android:text="@string/txt_description_quest_proposal"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelDescriptionQuestProposal"


                android:padding="9dp"

                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/tvLabelStepsQuestProposal"
                android:text="@string/label_quest_journal_event"

                app:layout_constraintTop_toBottomOf="@+id/tvTextDescriptionQuestProposal"
                app:layout_constraintLeft_toLeftOf="parent"

                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"

                android:textSize="19sp"
                android:textStyle="bold"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvQuestHistory"
                android:scrollbars="vertical"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelStepsQuestProposal"

                android:padding="9dp"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>

